--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Caveat&family=Montserrat&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Caveat&family=Montserrat");
 
 /* Color palettes built using https://docusaurus.io/docs/styling-layout#styling-your-site-with-infima */
 
@@ -42,7 +42,7 @@
 
 .navbar__brand,
 .navbar__item {
-	font-family: "Caveat", sans-serif;
+	font-family: "Caveat", cursive;
 	font-size: 1.5em;
 	color: var(--text-color);
 }
@@ -57,21 +57,21 @@
 h1 {
 	text-align: center;
 	margin-bottom: 32px;
-	font-family: "Caveat", sans-serif;
+	font-family: "Caveat", cursive;
 	font-size: 3em;
 	color: var(--ifm-color-primary);
 }
 
 h2 {
 	margin: 32px 0;
-	font-family: "Caveat", sans-serif;
+	font-family: "Caveat", cursive;
 	font-size: 2em;
 	color: var(--ifm-color-primary);
 }
 
 h3 {
 	margin: 32px 0;
-	font-family: "Caveat", sans-serif;
+	font-family: "Caveat", cursive;
 	font-size: 1.7em;
 	color: var(--text-color);
 }
