--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -141,3 +141,17 @@ h4 {
 	text-align: center;
 	margin: 0;
 }
+
+/* Page specifics tweaks */
+
+.aboutUsColumn {
+	display: flex;
+	gap: 64px;
+}
+
+@media screen and (max-width: 1000px) {
+	.aboutUsColumn {
+		flex-direction: column;
+		gap: 0;
+	}
+}
